# shiromana-server

./: .gitignore  Cargo.toml  build.rs  old.rs  test.sh  todo.txt
.cargo/: config.toml
src/: main.rs  versions.rs
src/api/: broker.rs  error.rs  message.rs  mod.rs
src/api/routes/: library.rs  media.rs  mod.rs  series.rs  tag.rs  utils.rs
