[package]
name = "shiromana-server"
version = "0.1.0"
authors = ["Oyami-Srk <hhx.xxm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiromana-rs = { path = "../shiromana-rs" }
tokio = { version = "1", features = ["full"] }
actix-web = "3"
qstring = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"