[package]
name = "shiromana-server"
version = "0.1.0"
authors = ["Oyami-Srk <hhx.xxm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
shiromana-rs = { path = "../shiromana-rs" }
tokio = { version = "1", features = ["full"] }
actix-web = "3"
qstring = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
clap = "2.33.3"
log = "0.4"
base64 = "0.13"
paste = "1.0"
mime-sniffer = "0.1"
mime = "0.3"